<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">




    <RadioGroup
        android:id="@+id/ThemeButton"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/theme"
            android:text="@string/theme"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/LightButton"
            android:text="@string/light"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <RadioButton
            android:id="@+id/DarkButton"
            android:text="@string/dark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </RadioGroup>


    <TextView
        android:id="@+id/notify"
        android:text="@string/notifications"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:text="@string/allows"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/Details"
        android:text="@string/profile"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/emailtitle"
        android:padding="20dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/nicknames"
        android:inputType="text"
        android:padding="15dp"
        android:autofillHints="name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname" />

    <Button
        android:id="@+id/save"
        android:text="@string/save"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>